@@ -1,9 +1,36 @@
-Atari 800 Emulator, Version 2.0.1
-OS/A_ROM=/cd/atariosa.rom
-OS/B_ROM=/cd/atariosb.rom
-XL/XE_ROM=/cd/atarixl.rom
-BASIC_ROM=/cd/ataribas.rom
-5200_ROM=/cd/5200.rom
+Atari 800 Emulator, Version 3.1.0
+ROM_OS_A_NTSC=
+ROM_OS_A_PAL=
+ROM_OS_B_NTSC=
+ROM_OS_AA00R10=
+ROM_OS_AA00R11=
+ROM_OS_BB00R1=
+ROM_OS_BB01R2=/cd/atarixl.rom
+ROM_OS_BB02R3=
+ROM_OS_BB02R3V4=
+ROM_OS_CC01R4=
+ROM_OS_BB01R3=
+ROM_OS_BB01R4=
+ROM_OS_BB01R59=
+ROM_OS_BB01R59A=
+ROM_5200=/cd/5200.rom
+ROM_5200_A=
+ROM_BASIC_A=
+ROM_BASIC_B=
+ROM_BASIC_C=/cd/ataribas.rom
+ROM_XEGAME=
+ROM_400/800_CUSTOM=/cd/atariosb.rom
+ROM_XL/XE_CUSTOM=
+ROM_5200_CUSTOM=
+ROM_BASIC_CUSTOM=
+ROM_XEGAME_CUSTOM=
+OS_400/800_VERSION=AUTO
+OS_XL/XE_VERSION=AUTO
+OS_5200_VERSION=AUTO
+BASIC_VERSION=AUTO
+XEGS_GAME_VERSION=AUTO
+ATARI_FILES_DIR=/cd
+SAVED_FILES_DIR=/vmu/a1
 H1_DIR=/cd
 H2_DIR=/cd
 H3_DIR=/cd
@@ -14,15 +41,56 @@ SCREEN_REFRESH_RATIO=1
 MACHINE_TYPE=Atari XL/XE
 RAM_SIZE=64
 DEFAULT_TV_MODE=PAL
+MOSAIC_RAM_NUM_BANKS=0
+AXLON_RAM_NUM_BANKS=0
+ENABLE_MAPRAM=0
 DISABLE_BASIC=1
 ENABLE_SIO_PATCH=1
 ENABLE_H_PATCH=0
 ENABLE_P_PATCH=0
-ENABLE_R_PATCH=0
 ENABLE_NEW_POKEY=0
 STEREO_POKEY=0
 SPEAKER_SOUND=1
-ATARI_FILES_DIR=/cd
-SAVED_FILES_DIR=/vmu/a1
+BUILTIN_BASIC=1
+KEYBOARD_LEDS=0
+F_KEYS=0
+BUILTIN_GAME=0
+KEYBOARD_DETACHED=0
+1200XL_JUMPER=0
+CFG_SAVE_ON_EXIT=0
+CARTRIDGE_FILENAME=
+CARTRIDGE_TYPE=0
+CARTRIDGE_PIGGYBACK_FILENAME=
+CARTRIDGE_PIGGYBACK_TYPE=0
+CARTRIDGE_AUTOREBOOT=1
+CASSETTE_FILENAME=
+CASSETTE_LOADED=0
+CASSETTE_WRITE_PROTECT=0
+RTIME=1
+COLOURS_NTSC_SATURATION=0
+COLOURS_NTSC_CONTRAST=0
+COLOURS_NTSC_BRIGHTNESS=0
+COLOURS_NTSC_GAMMA=2.35
+COLOURS_NTSC_HUE=0
+COLOURS_NTSC_GTIA_DELAY=26.8
+COLOURS_NTSC_EXTERNAL_PALETTE=
+COLOURS_NTSC_EXTERNAL_PALETTE_LOADED=0
+COLOURS_NTSC_ADJUST_EXTERNAL_PALETTE=0
+COLOURS_PAL_SATURATION=0
+COLOURS_PAL_CONTRAST=0
+COLOURS_PAL_BRIGHTNESS=0
+COLOURS_PAL_GAMMA=2.35
+COLOURS_PAL_HUE=0
+COLOURS_PAL_GTIA_DELAY=23.2
+COLOURS_PAL_EXTERNAL_PALETTE=
+COLOURS_PAL_EXTERNAL_PALETTE_LOADED=0
+COLOURS_PAL_ADJUST_EXTERNAL_PALETTE=0
+ARTIFACT_NTSC=NONE
+ARTIFACT_PAL=NONE
+ARTIFACT_NTSC_MODE=0
+SCREEN_SHOW_SPEED=0
+SCREEN_SHOW_IO_ACTIVITY=1
+SCREEN_SHOW_IO_COUNTER=0
+SCREEN_SHOW_1200XL_LEDS=1
 DISPLAY_Y_ADJUST=0
 DISPLAY_X_ADJUST=0
