@@ -452,6 +452,7 @@
 #define SIGNED_SAMPLES
 #define DIRTYRECT
 #define USE_UI_BASIC_ONSCREEN_KEYBOARD
+#define SUPPORTS_PLATFORM_CONFIGURE
 #undef SPEED_CHECK
 #undef HZ_TEST
 
